--- a/style.css
+++ b/style.css
@@ -2,4 +2,7 @@ div.main{
 background-image: url("https://images.squarespace-cdn.com/content/678c3e6713c4c85ce6af7e2d/495f1add-a165-4b1b-b6b9-209f460f1f9c/IMG_3869.JPG?content-type=image%2Fjpeg");
 justify-content:center;
   align-content:center;
+  height:100vh;
+  width:100vw;
+  margin:0px;
 }
