--- a/style.css
+++ b/style.css
@@ -13,3 +13,9 @@ justify-content:center;
 body{
   margin:0px;
 }
+
+div.donate-block{
+  background-color: white;
+  border-radius: 3em;
+  box-shadow: 0px 5px 10px 6px;
+}
