--- a/style.css
+++ b/style.css
@@ -17,5 +17,5 @@ body{
 div.donate-block{
   background-color: white;
   border-radius: 3em;
-  box-shadow: 0px 5px 10px 6px;
+  box-shadow: 0px 5px 10px 6px rgba(0,0,0,0.5);
 }
