--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ justify-content:center;
   width:100vw;
   margin:0px;
   background-size: cover;
-  padding: 0px;
+  padding: auto;
   display: block;
 }
 
@@ -18,7 +18,7 @@ div.donate-block{
   background-color: white;
   border-radius: 3em;
   box-shadow: 0px 5px 10px 6px rgba(0,0,0,0.5);
-  display:flex;
+  display:block;
   align-content: center;
   justify-content: center;
   margin: auto;
