--- a/style.css
+++ b/style.css
@@ -18,9 +18,7 @@ div.donate-block{
   background-color: white;
   border-radius: 3em;
   box-shadow: 0px 5px 10px 6px rgba(0,0,0,0.5);
-  display:block;
-  align-content: center;
+  display: flex;
   justify-content: center;
-  margin: auto;
-  padding: auto;
+  align-items: center;
 }
