--- a/style.css
+++ b/style.css
@@ -25,3 +25,9 @@ div.donate-block{
   min-height: 400px;
   min-width: 600px;
 }
+
+div.bg-overlay{
+  background-color: rgba(0,0,0,0.3);
+    height:100vh;
+  width:100vw;
+}
