--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ div.donate-block{
 }
 
 .primary-button{
+  position: absolute;
+  transform: translate(-50%, -50%);
 padding: 25px;
   background-color: #9FE3BD;
   color:black;
