--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ div.donate-block{
 }
 
 .primary-button{
-  position: absolute;
+  position: static;
   transform: translate(-50%, -50%);
 padding: 25px;
   background-color: #9FE3BD;
