--- a/style.css
+++ b/style.css
@@ -44,10 +44,9 @@ padding: 25px;
 }
 
 div.bg-overlay{
-  background-color: black;
+  background-color: rgba(0,0,0,0.3);
     height:100vh;
   width:100vw;
-  opacity: 0.3;
 }
 
 .MuiBox-root.css-lgn281{
