--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ padding: 25px;
 }
 
 div.bg-overlay{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   background-color: rgba(0,0,0,0.3);
     height:100vh;
   width:100vw;
