--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ padding: 25px;
   border-radius: 1em;
   border-width: 0px;
   transform: scale(1);
-  box-shadow: 2px, 0px, 3px, 5px, rgba(0,0,0,0.3);
+  box-shadow: 2px 0px 3px 5px rgba(0,0,0,0.3);
   transition: transform .25s, background-color .25s;
 }
 
