--- a/style.css
+++ b/style.css
@@ -52,6 +52,26 @@ div.bg-overlay{
     height:100vh;
   width:100vw;
 }
+@media(min-width: 0px){
+.wai-image{
+  height: 200px;
+  width: 200px;
+}
+}
+
+@media(min-width: 720px){
+.wai-image{
+  height: 350px;
+  width: 350px;
+}
+}
+
+@media(min-width: 1250px){
+.wai-image{
+  height: 500px;
+  width: 500px;
+}
+}
 
 .MuiBox-root.css-lgn281{
   display:none !important;
