--- a/style.css
+++ b/style.css
@@ -52,6 +52,12 @@ div.bg-overlay{
     height:100vh;
   width:100vw;
 }
+
+.wai-image{
+  padding-bottom: 25px;
+  box-shadow: 3px 0px 15px 5px rgba(0,0,0,0.3);
+}
+
 @media(min-width: 0px){
 .wai-image{
   height: 200px;
