--- a/style.css
+++ b/style.css
@@ -54,8 +54,11 @@ div.bg-overlay{
 }
 
 .wai-image{
-  padding-bottom: 25px;
+  margin-bottom: 25px;
   box-shadow: 3px 0px 15px 5px rgba(0,0,0,0.3);
+  padding:15px;
+  background-color: white;
+  border-radius; 100%;
 }
 
 @media(min-width: 0px){
