--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ div.bg-overlay{
   box-shadow: 3px 0px 15px 5px rgba(0,0,0,0.3);
   padding:15px;
   background-color: white;
-  border-radius; 100%;
+  border-radius: 100%;
 }
 
 @media(min-width: 0px){
